--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.0"
+    "homepage": "https://ydema1991-cloud.github.io/drylicious-website"
+
   },
   "devDependencies": {
     "@types/react": "19.0.0",
